add the possibility to import BLAST/PLAST results annotated with IprScan predicted domains