@@ -4,7 +4,7 @@
 <project name="Plealog-bioinfo-ui" default="help" basedir=".">
 
 	<property name="pbc.libName"    value="pb-ui" />
-	<property name="pbc.LibVersion" value="5.3.1" />
+	<property name="pbc.LibVersion" value="5.4.0" />
 	
 	<property name="compile.optimize" value="on" />
 	<property name="compile.debug"    value="off" />
@@ -35,15 +35,50 @@
 		<echo>      compile: compile the code.</echo>
 		<echo>         jdoc: compile the Javadoc.</echo>
 		<echo>  makedistrib: compile and make JAR of the PB-UI system.</echo>
+	  <echo/>
+	  <echo>  Ant version: ${ant.version}</echo>
+	  <echo>  Java version: ${ant.java.version}</echo>
 	</target>
 
 	<!-- ============================================================= -->
 	<target name="prepare">
+	  <echo/>
+	  <echo>  Ant version: ${ant.version}</echo>
+	  <echo>  Java version: ${ant.java.version}</echo>
 		<delete dir="${distrib}"/>
 		<mkdir  dir="${Dlib}"/>
 		<mkdir  dir="${Dsrc}"/>
 		<mkdir  dir="${Ddoc.api}"/>
 	</target>
+
+	<target name="is-java-eight">
+	  <condition property="java.eight">
+	      <equals arg1="${ant.java.version}" arg2="1.8"/>
+	  </condition>
+	</target>
+
+	<target name="javac8" depends="is-java-eight" if="java.eight">
+	  <javac srcdir="${Dsrc}"
+	         destdir="${Dlib}"
+	         classpathref="class.path"
+	         debug="${compile.debug}"
+	         optimize="${compile.optimize}"
+	         >
+	  </javac>
+	</target>
+
+	  <!-- added for TravisCI -->
+	<target name="javac9" depends="is-java-eight" unless="java.eight">
+	  <javac srcdir="${Dsrc}"
+	         destdir="${Dlib}"
+	         classpathref="class.path"
+	         debug="${compile.debug}"
+	         optimize="${compile.optimize}"
+	         >
+	    <compilerarg line="--add-modules java.se.ee"/>
+	  </javac>
+	</target>
+
 
 	<!-- ============================================================= -->
 	<target name="compile" depends="prepare">
@@ -80,13 +115,8 @@
         <include name="bzh/plealog/bioinfo/ui/resources/**"/>
 			</fileset>
 		</copy>
-		<javac srcdir="${Dsrc}"
-          destdir="${Dlib}"
-	        classpathref="class.path"
-          debug="${compile.debug}"
-          optimize="${compile.optimize}"
-          >
-		</javac>
+	  <antcall target="javac8"/>
+	  <antcall target="javac9"/>
 		<copy todir="${Dlib}/bzh/plealog/bioinfo/ui">
 			<fileset dir="${Dsrc}/bzh/plealog/bioinfo/ui">
 				<include name="**/*gif"/>
@@ -133,12 +163,12 @@
     sourcepath="${src}" 
     version="true">
 			<bottom>
-				<![CDATA[(c) <a href="https://www.linkedin.com/in/pgdurand56/">Patrick G. Durand</a> - 2004-2017]]>
+				<![CDATA[(c) <a href="https://www.linkedin.com/in/pgdurand56/">Patrick G. Durand</a> - 2004-2020]]>
 			</bottom>
 			<header>
 				<![CDATA[Plealog Bioinformatics UI API - ${pbc.LibVersion}]]>
 			</header>
-      <link href="https://docs.oracle.com/javase/7/docs/api/"/>
+      <link href="https://docs.oracle.com/javase/8/docs/api/"/>
       <link href="https://pgdurand.github.io/Bioinformatics-Core-API/api/"/>
 			<!-- arg value="-Xdoclint:reference"/ -->
 		</javadoc>
